@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 2092 RMD160 3f491176c0a8916c6ad057d3aabd7778b48876c9 SHA1 01af9d3cada7bc8b4281b980fea5950b99e9971c SHA256 9d1eee8b239e7fee30bfb3a0226a0477f19c851cb6130144440093d2ddf2502f
-EBUILD midori-9999.ebuild 1892 RMD160 43745c1cdd0e2bf83a5ddc898ee2bc4ad193c48f SHA1 b9cc2f62c28aca9d900b9d1ae42f219b1a88cd2a SHA256 b498fd8b62b13d879d2ec2f255c712bf971f142dff38c53cd61a74a2090eec65
-MISC ChangeLog 1888 RMD160 8adfb77c43d6df64d4bdcac553a78520a868dbbd SHA1 74c2c6d666fd1b0abd95639444766a1536f8a380 SHA256 842dd52ab46db73710a4f6db15d534b1b8bfb5f62ccca60e1bafef60ee9b1365
+EBUILD midori-0.1.1.ebuild 2117 RMD160 2c3a4894ae0cbaa5fd68dae7e3159aab8b8243b4 SHA1 14bbdb4beccec37c2f93ed7177269e3f96f477ff SHA256 5811b3feaf1de390086537434123b3003656d5eec399b3493c1b5bd2f3485609
+EBUILD midori-9999.ebuild 1917 RMD160 b802659119f730c7e28ce9c003b953d30d0201af SHA1 38011801d496fcfc2ee3683435e213c3d475571c SHA256 0f8556eb1ab5218103621eb0adc0783092cdfb03b0acb0e551520ce81369dea5
+MISC ChangeLog 2031 RMD160 4ee790d3f3b8eb596db592f098baa6ca966674eb SHA1 082c27745a76c1310f26140862ae745d05f05f1c SHA256 28a80bae8c6f5be6dcdd581dce564e9c1cd3c8d56f91afebbc1b9f2144154101
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklBVnoACgkQKhnDs22gwa+nggCgnHJaqRzI1up6+GgYdVeVPrxp
-YHUAn3fNNf9q5RLJZU4LX9nBjnY4ZzBt
-=ANZI
+iEYEARECAAYFAklBZ2AACgkQKhnDs22gwa8exQCfbDux41RsONwOH1qyLDiKY4Np
+keEAoKju9nLRPNc5QemHz5Qx1sVta28D
+=b6hr
 -----END PGP SIGNATURE-----
